--- a/src/citizen-front/Pages/SubmitApplication.razor
+++ b/src/citizen-front/Pages/SubmitApplication.razor
@@ -174,7 +174,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        await ProxyAPIService.InitializeService();
+        //await ProxyAPIService.InitializeService();
     }
 
     public async Task OnSubmitApplication()
