Registration - Refactor things + Add reg registration API endpoint

--- a/src/citizen-front/Pages/SubmitApplication.razor
+++ b/src/citizen-front/Pages/SubmitApplication.razor
@@ -166,7 +166,7 @@
 
 
 @code {
-    private ProxyRegistration Application { get; set; } = new ProxyRegistration();
+    private ProxyApplication Application { get; set; } = new ProxyApplication();
 
     private DateTime PresidentialFirst = new DateTime(2022, 04, 01);
     private DateTime PresidentialSecond = new DateTime(2022, 04, 15);
