--- a/src/citizen-front/Pages/SubmitApplication.razor
+++ b/src/citizen-front/Pages/SubmitApplication.razor
@@ -20,7 +20,7 @@
         <div class="md:col-span-1">
           <div class="px-4 sm:px-0">
             <h3 class="text-lg font-medium leading-6 text-gray-900">About you</h3>
-            <p class="mt-1 text-sm text-gray-600">Use a permanent address where you can receive mail.</p>
+            <p class="mt-1 text-sm text-gray-600">We need few info about you to ensure your request is processed.</p>
           </div>
         </div>
         <div class="mt-5 md:mt-0 md:col-span-2">
@@ -85,8 +85,8 @@
       <div class="md:grid md:grid-cols-3 md:gap-6">
         <div class="md:col-span-1">
           <div class="px-4 sm:px-0">
-            <h3 class="text-lg font-medium leading-6 text-gray-900">Proxy duration</h3>
-            <p class="mt-1 text-sm text-gray-600">Use a permanent address where you can receive mail.</p>
+            <h3 class="text-lg font-medium leading-6 text-gray-900">Your Proxy</h3>
+            <p class="mt-1 text-sm text-gray-600">This person needs to show in person to vote on your behalf.</p>
           </div>
         </div>
         <div class="mt-5 md:mt-0 md:col-span-2">
