Fix Accessibility issues

--- a/src/citizen-front/Pages/Index.razor
+++ b/src/citizen-front/Pages/Index.razor
@@ -14,7 +14,7 @@
     </div>
 
     <div class="w-80">
-        <img src="https://gist.githubusercontent.com/cmaneu/64d67c0935fc79f3de0fd264107a4b7f/raw/6eccce1e59fb88e2f8b9b4e11c769b24ec05a814/illustration.svg" />
+        <img alt="A person selecting an option between three choices" src="https://gist.githubusercontent.com/cmaneu/64d67c0935fc79f3de0fd264107a4b7f/raw/6eccce1e59fb88e2f8b9b4e11c769b24ec05a814/illustration.svg" />
     </div>
 </div>
 
