--- a/src/citizen-front/Shared/Header.razor
+++ b/src/citizen-front/Shared/Header.razor
@@ -1,8 +1,8 @@
 ﻿
   <header>
-    <div class="w-full p-4 bg-orange-200 text-center">
+    <div class="w-full p-4 bg-yellow-200 text-center">
       <p class="font-bold text-center"><span class="text-red-600 underline decoration-orange-500 decoration-wavy decoration-2">Warning</span> This site is <span class="underline decoration-red-700">not</span> official. It's a technology demo for developers & IT Pro.</p>
-      <p>It's also Open-Source. You can learn more here.</p>
+      <p>It's also Open-Source. You can learn more <a href="https://github.com/cmaneu/proxyvote">here.</a></p>
     </div>
 
     <div class="h-2 grid grid-cols-3 gap-4">
