Update labels an dlinks

--- a/src/citizen-front/Shared/Header.razor
+++ b/src/citizen-front/Shared/Header.razor
@@ -2,7 +2,7 @@
   <header>
     <div class="w-full p-4 bg-orange-200 text-center">
       <p class="font-bold text-center"><span class="text-red-600 underline decoration-orange-500 decoration-wavy decoration-2">Warning</span> This site is <span class="underline decoration-red-700">not</span> official. It's a technology demo for developers & IT Pro.</p>
-      <p>It's also Open-Source. You can learn more here.</p>
+      <p>It's also Open-Source. <a href="https://github.com/cmaneu/proxyvote">You can learn more here.</a></p>
     </div>
 
     <div class="h-2 grid grid-cols-3 gap-4">
@@ -17,7 +17,7 @@
           <svg class="w-6 h-6" version="1.1" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg">
                 <path d="m457.98 292.9c-3.4023 1.6992-6.3789 3.8281-8.9297 6.8047-28.488 35.715-43.371 86.738-54.426 140.32-10.203 51.023-15.73 104.6-21.684 150.52l-187.94 235.55c-7.2266 9.3555-5.9531 24.66 2.9766 32.738l190.49 173.48-198.57-0.85156v48.047l719.86 0.42578v-47.621h-335.48l269.57-307.42c8.0781-8.9297 7.2266-23.812-1.2773-32.316l-72.281-72.281c13.18-11.48 25.512-23.387 36.141-35.293 31.465-36.141 51.023-79.086 54.426-136.06l156.47-75.262c7.6523-4.2539 12.758-12.758 12.758-21.684v-205.37c-0.42969-11.906-10.633-22.535-22.113-23.383-206.22-24.238-386.08 95.242-540 169.65zm72.285 177.73 84.613 84.188c-23.812 27.211-48.047 52.723-65.48 75.684-22.961 28.488-34.016 67.605-14.457 96.094 42.094 34.867 93.117 10.203 129.26-23.387 19.984-17.859 42.094-35.715 60.379-51.023l58.254 58.254-282.33 321.88h-51.023l-213.03-194.31c98.219-122.88 196.44-244.49 293.81-367.37z" fill="#00449e"/>
             </svg>
-          ProxyVote.gov
+          ProxyVote.demo
         </div>
         <NavMenu />
       </div>
