--- a/src/citizen-front/Shared/NavMenu.razor
+++ b/src/citizen-front/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
 ﻿<ul class="gap-4 flex">
-    <li class="hover:underline">How it works?</li>
+    <li class="hover:underline"><a href="https://github.com/cmaneu/proxyvote">How it works?</a></li>
     <li class="hover:underline">Track your request</li>
 </ul>
